// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationItem type={\`relationship\`}/> snapshot of the notification item component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 1,
      "borderColor": "grey",
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      onRequestClose={[Function]}
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
      <View
        hideModalContentWhileAnimating={false}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        pointerEvents="box-none"
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#FCFCFC",
            "borderRadius": 20,
            "flex": 1,
            "height": 333.5,
            "justifyContent": "space-evenly",
            "margin": 37.5,
            "marginTop": 296.44444444444446,
            "maxHeight": 350,
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": 681.8181818181818,
          }
        }
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
      >
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "width": 625,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "alignSelf": "center",
                  "borderRadius": 30,
                  "height": 60,
                  "overflow": "hidden",
                  "width": 60,
                }
              }
            />
            <View
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "poppins-bold",
                    "fontSize": 13,
                    "margin": "auto",
                    "textAlign": "left",
                  }
                }
              >
                Kim
              </Text>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "poppins-medium",
                    "fontSize": 13,
                    "textAlign": "left",
                    "width": 200,
                  }
                }
              >
                Kim is a very good app tester...
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "marginTop": 5,
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 13,
                      "marginRight": 5,
                      "resizeMode": "contain",
                      "width": 10,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "poppins-light",
                      "fontSize": 11,
                      "margin": "auto",
                      "textAlign": "left",
                    }
                  }
                >
                   
                  in NaN years
                   
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 13,
                    "marginTop": 4,
                    "width": 13,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "color": "#F8AE39",
                  }
                }
              >
                 
                 
                km
                 
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            style={
              Object {
                "alignItems": "space-between",
                "borderColor": "orange",
                "borderWidth": 0,
                "justifyContent": "space-between",
                "marginTop": 20,
                "width": 625,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "black",
                  "borderColor": "black",
                  "borderRadius": 7.5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 35,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": "47%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "poppins-medium",
                    "fontSize": 10,
                  }
                }
              >
                ACCEPT
              </Text>
            </View>
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "black",
                  "borderRadius": 7.5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 35,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": "47%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "poppins-medium",
                    "fontSize": 10,
                  }
                }
              >
                DECLINE
              </Text>
            </View>
          </View>
        </View>
      </View>
    </Modal>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 10,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "backgroundColor": "white",
            "borderRadius": 75,
            "height": 40,
            "overflow": "hidden",
            "width": 40,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "column",
            "left": "auto",
            "marginLeft": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "fontFamily": "poppins-semi-bold",
                "fontSize": 9,
                "fontWeight": "normal",
                "marginTop": 4,
              }
            }
          >
             
            Kim wants to connect with you
             
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "grey",
              "fontFamily": "poppins-light",
              "fontSize": 10,
              "fontWeight": "normal",
            }
          }
        >
          in 452 years
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginRight": 10,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderRadius": 75,
              "borderWidth": 1,
              "height": 33,
              "opacity": 1,
              "overflow": "hidden",
              "width": 33,
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 18,
                "marginLeft": 7,
                "marginTop": 7,
                "overflow": "hidden",
                "width": 18,
              }
            }
          />
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "borderRadius": 75,
              "height": 33,
              "marginLeft": 12,
              "opacity": 1,
              "overflow": "hidden",
              "width": 33,
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 18,
                "marginLeft": 7,
                "marginTop": 7,
                "overflow": "hidden",
                "width": 18,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<NotificationItem type={\`status\`}/> snapshot of the notification item component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 1,
      "borderColor": "grey",
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 10,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "backgroundColor": "white",
            "borderRadius": 75,
            "height": 40,
            "overflow": "hidden",
            "width": 40,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "column",
            "left": "auto",
            "marginLeft": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "fontFamily": "poppins-semi-bold",
                "fontSize": 9,
                "fontWeight": "normal",
                "marginTop": 4,
              }
            }
          >
             
            Kim liked your status
             
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "grey",
              "fontFamily": "poppins-light",
              "fontSize": 10,
              "fontWeight": "normal",
            }
          }
        >
          in 452 years
        </Text>
      </View>
    </View>
  </View>
</View>
`;
